--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": "BuhFuh69",
     "database": "song_bird",
     "host": "127.0.0.1",
     "dialect": "mysql"
